# Trustme-backend

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  aw.spec  gptme.toml  pyproject.toml
.github/workflows/: build-tauri.yml  build.yml  codeql.yml  lint.yml  pages.yml  test.yml
aw-client/: README.md  pyproject.toml
aw-client/aw_client/: client.py
aw-client/examples/: suggest_categories.py  working_hours.py
aw-client/tests/: test_client.py
aw-core/: README.md  pyproject.toml
aw-core/aw_cli/: log.py
aw-core/aw_core/: dirs.py  models.py  util.py
aw-core/aw_datastore/: benchmark.py  datastore.py
aw-core/aw_datastore/storages/: __init__.py  memory.py
aw-core/tests/: test_datastore.py  test_dirs.py  test_query2.py
aw-notify/: Cargo.toml  README.md  config.example.toml
aw-notify/.github/workflows/: release.yml
aw-notify/src/: main.rs
aw-qt/: README.md  aw-qt.spec  pyproject.toml
aw-qt/aw_qt/: main.py  trayicon.py
aw-qt/resources/: aw-qt.desktop
aw-server/: Makefile  README.md  pyproject.toml
aw-server-rust/: Makefile  README.md  aw-server.service
aw-server-rust/aw-client-rust/: Cargo.toml  README.md
aw-server-rust/aw-datastore/: Cargo.toml
aw-server-rust/aw-models/: Cargo.toml
aw-server-rust/aw-query/: Cargo.toml
aw-server-rust/aw-server/: Cargo.toml  build.rs
aw-server-rust/aw-sync/: Cargo.toml  README.md  test-sync-pull.sh  test-sync-push.sh
aw-server-rust/aw-transform/: Cargo.toml
aw-server/aw_server/: __about__.py  __init__.py  main.py  rest.py  server.py  settings_schema.py
aw-server/misc/: aw-server.service
aw-server/tests/: test_checkins.py  test_client.py  test_dashboard_api_facade.py  test_dashboard_contract_codegen.py  test_dashboard_details.py  test_dashboard_domain_service.py  test_dashboard_dto.py  test_dashboard_routes.py  test_server.py  test_settings_schema.py  test_summary_snapshot_invalidation.py  test_summary_snapshot_response.py
aw-tauri/: Makefile  README.md
aw-tauri/src-tauri/: Cargo.toml  build.rs
aw-watcher-afk/: README.md  pyproject.toml
aw-watcher-afk/aw_watcher_afk/: windows.py
aw-watcher-afk/misc/: aw-watcher-afk.service
aw-watcher-input/: README.md  pyproject.toml
aw-watcher-input/visualization/: package.json
aw-watcher-window/: README.md  pyproject.toml
aw-watcher-window/aw_watcher_window/: macos_permissions.py  main.py  xlib.py  xprop.py
aw-watcher-window/misc/: aw-watcher-x11.service
awatcher/: Cargo.toml  README.md
awatcher/src/: config.rs
awatcher/watchers/: Cargo.toml
docs/: index.html  styles.css
docs/architecture/: dashboard-boundary.md  dashboard-domain-service.md  dashboard-dto-contracts.md  (+3 more)
scripts/: README.md  notarize.sh
tests/: test_dashboard_summary_warmup.py
(+54 files in other folders)
